<resources>
    <string name="app_name">Dedo Duro</string>
    <string name="hintEmail">Email</string>
    <string name="botaoEntrar">Entrar</string>
    <string name="botaoSenha">Senha</string>
    <string name="erroDeConecao">Você não tem conexão.</string>
    <string name="textoAguarde">Aguarde</string>
    <string name="textoLogin">LOGIN</string>
    <string name="textoRegistrarNovoUsuario">Registre-se</string>
    <string name="tituloTelaRegistro">Registro de Usuário</string>
    <string name="tituloTelaHome">Obras Paralizadas</string>
    <string name="tituloTelaDescricao">Descrição</string>
    <string name="tituloTelaNovaObra">Nova Obra</string>
    <string name="tituloTelaEditarObra">Editar</string>
    <string name="contentDescriptionNome_obra">Nome da obra</string>
    <string name="contentDescriptionLocalizacao_obra">Localização da obra</string>
    <string name="contentDescriptionDatas_obra">Datas de início e fim da obra</string>
    <string name="contentDescriptionDescricao_obra">Descrição da obra</string>
    <string name="contentDescriptionPoncentagem_execucao">Porcentagem aproximada de execução da obra</string>
    <string name="contentDescritionLogo">Logo do aplicativo: dedo apontando para cima</string>
    <string name="fotoObra">Adicione uma foto atual da obra</string>
    <string name="progressoObra">Defina o progresso aproximado da obra</string>
    <string name="selecioneData">Selecione</string>
    <string name="finalObra">Conclusão da Obra</string>
    <string name="inicioObra">Inicio da Obra</string>
    <string name="local">Localização</string>
    <string name="nome">Nome da Obra</string>
    <string name="botaoRegistrar">Registrar</string>
    <string name="hintPoncento">0%</string>
    <string name="progressDialogUpload">Carregando imagem...</string>
    <string name="dialogLoadImage">% concluído</string>
    <string name="contentDescriptionMiniatura">Miniatura da imagem da obra</string>
</resources>
