<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.ufg.com.dedoduro.auth.RegisterActivity">

    <!--toolBar-->
    <android.support.v7.widget.Toolbar
        android:id="@+id/register_toolbar"
        app:title="@string/textoRegistrarNovoUsuario"
        app:titleTextColor="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:theme="@style/ToolbarStyle"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <!--campo de email-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/usernameWrapper"
        android:layout_width="397dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_toolbar">

        <EditText
            android:id="@+id/input_new_email"
            android:layout_width="340dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="212dp"
            android:drawableEnd="@drawable/ic_person_24dp"
            android:hint="@string/hintEmail"
            android:inputType="textEmailAddress"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.design.widget.TextInputLayout>

    <!--campo de senha-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameWrapper"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameWrapper">

        <EditText
            android:id="@+id/input_new_password"
            android:layout_width="340dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:drawableEnd="@drawable/ic_lock_24dp"
            android:hint="@string/botaoSenha"
            android:inputType="textPassword"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_new_email" />
    </android.support.design.widget.TextInputLayout>

    <!--botão de registrar-->
    <Button
        android:id="@+id/button_register"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/botaoRegistrar"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordWrapper" />

</android.support.constraint.ConstraintLayout>
