<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".model.EdicaoObraActivity">

    <!--toolBar-->
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarEdit_obra"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ToolbarStyle"
        app:title="@string/tituloTelaEditarObra"
        app:titleTextColor="@color/colorWhite" />

    <TextView
        android:id="@+id/textViewEdicaoNome_Obra"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="25sp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarEdit_obra" />

    <TextView
        android:id="@+id/textViewEdicaoLocal_obra"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorLightGrey"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEdicaoNome_Obra" />

    <View
        android:id="@+id/divider"
        android:layout_width="395dp"
        android:layout_height="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEdicaoLocal_obra" />

    <!--data prevista para conclusão da obra-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutEdicaoData_conclusao"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:counterTextAppearance="@style/TextLimitStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider">

        <TextView
            android:id="@+id/textViewSelecioneData_fim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/finalObra" />

        <TextView
            android:id="@+id/textViewEdicaoData_conclusao"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/selecioneData"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_local_obra" />
    </android.support.design.widget.TextInputLayout>

    <!--porcentagem de execução da obra-->
    <LinearLayout
        android:id="@+id/linearLayoutEdicaoProgresso_obra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent='true'
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEdicaoData_conclusao">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/progressoObra" />

        <com.xw.repo.BubbleSeekBar
            android:id="@+id/seekBarEdicao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:bsb_max="100"
            app:bsb_min="0"
            app:bsb_progress="0"
            app:bsb_section_count="10"
            app:bsb_section_text_position="bottom_sides"
            app:bsb_show_progress_in_float="false"
            app:bsb_show_section_mark="true"
            app:bsb_show_section_text="true"
            app:bsb_touch_to_seek="true" />

        <TextView
            android:id="@+id/textViewEdicaoProgresso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>